--- a/components/printers/linux/udlgselectprinter.lfm
+++ b/components/printers/linux/udlgselectprinter.lfm
@@ -1,105 +1,114 @@
 object dlgSelectPrinter: TdlgSelectPrinter
+  ActiveControl = cbPrinters
   Caption = 'Printing'
-  ClientHeight = 385
-  ClientWidth = 537
+  ClientHeight = 401
+  ClientWidth = 552
   OnCreate = dlgSelectPrinterCREATE
   OnShow = dlgSelectPrinterSHOW
-  PixelsPerInch = 112
-  HorzScrollBar.Page = 536
-  VertScrollBar.Page = 384
-  Left = 430
-  Height = 385
-  Top = 208
-  Width = 537
+  PixelsPerInch = 75
+  HorzScrollBar.Page = 551
+  VertScrollBar.Page = 400
+  Left = 97
+  Height = 401
+  Top = 36
+  Width = 552
   object labCUPS: TLabel
     Caption = 'CUPS (Common Unix Printing System)'
     Color = clNone
+    ParentColor = False
     Left = 8
-    Height = 12
+    Height = 13
     Top = 152
-    Width = 211
+    Width = 212
   end
   object labCUPSServer: TLabel
     Caption = 'labCUPSServer'
     Color = clNone
+    ParentColor = False
     Left = 240
-    Height = 12
+    Height = 13
     Top = 152
-    Width = 87
+    Width = 88
   end
   object Groupbox1: TGroupBox
     Caption = ' Printer '
     ClientHeight = 119
-    ClientWidth = 525
-    ParentColor = True
+    ClientWidth = 532
     ParentCtl3D = False
     TabOrder = 0
     Left = 8
     Height = 136
     Top = 8
-    Width = 529
+    Width = 536
     object ImgPrn: TImage
       Transparent = True
       Left = 124
       Height = 19
-      Top = 9
+      Top = 7
       Width = 17
     end
     object Label1: TLabel
       Caption = 'Name'
       Color = clNone
+      ParentColor = False
       Left = 19
-      Height = 17
+      Height = 13
       Top = 9
-      Width = 97
+      Width = 33
     end
     object Label2: TLabel
       Caption = 'State'
       Color = clNone
+      ParentColor = False
       Left = 17
-      Height = 17
+      Height = 13
       Top = 36
-      Width = 99
+      Width = 29
     end
     object Label3: TLabel
       Caption = 'Location'
       Color = clNone
+      ParentColor = False
       Left = 18
-      Height = 17
+      Height = 13
       Top = 64
-      Width = 98
+      Width = 49
     end
     object Label4: TLabel
       Caption = 'Description'
       Color = clNone
+      ParentColor = False
       Left = 17
-      Height = 17
+      Height = 13
       Top = 92
-      Width = 99
+      Width = 64
     end
     object labState: TLabel
       Caption = 'labState'
       Color = clNone
+      ParentColor = False
       Left = 128
-      Height = 15
+      Height = 13
       Top = 40
-      Width = 391
+      Width = 46
     end
     object labLocation: TLabel
       Caption = 'labLocation'
       Color = clNone
+      ParentColor = False
       Left = 128
-      Height = 15
+      Height = 13
       Top = 66
-      Width = 391
+      Width = 66
     end
     object labComment: TLabel
       Caption = 'labComment'
       Color = clNone
+      ParentColor = False
       Left = 126
-      Height = 17
+      Height = 13
       Top = 92
-      Width = 389
+      Width = 69
     end
     object cbPrinters: TComboBox
       MaxLength = 0
@@ -112,9 +121,10 @@ object dlgSelectPrinter: TdlgSelectPrinter
       Left = 142
       Height = 22
       Top = 6
-      Width = 291
+      Width = 280
     end
     object btnProp: TButton
+      BorderSpacing.InnerBorder = 2
       Caption = 'Properties ...'
       OnClick = btnPropCLICK
       TabOrder = 1
@@ -123,74 +133,82 @@ object dlgSelectPrinter: TdlgSelectPrinter
       Top = 4
       Width = 92
     end
+    object cbPrintToFile: TCheckBox
+      Caption = 'Print to file'
+      TabOrder = 2
+      Left = 422
+      Height = 23
+      Top = 89
+      Width = 90
+    end
   end
   object NbOpts: TNotebook
     PageIndex = 0
-    Height = 168
-    Top = 176
+    Left = 8
+    Height = 192
+    Top = 168
     Width = 537
     object pgCopies: TPage
       Caption = 'Copies'
-      ClientWidth = 533
-      ClientHeight = 138
-      Left = 2
-      Height = 138
-      Top = 28
-      Width = 533
+      ClientWidth = 537
+      ClientHeight = 170
+      Height = 170
+      Top = 22
+      Width = 537
       object gbPages: TGroupBox
         Caption = ' Select pages '
-        ClientHeight = 115
+        ClientHeight = 139
         ClientWidth = 258
-        ParentColor = True
         ParentCtl3D = False
         TabOrder = 0
-        Left = 9
-        Height = 132
-        Top = 6
+        Left = 8
+        Height = 156
+        Top = 7
         Width = 262
         object Bevel1: TBevel
           Height = 3
-          Left = 14
+          Left = 18
           Name = 'Bevel1'
           Shape = bsTopLine
-          Top = 73
+          Top = 100
           Style = bsRaised
           Width = 230
-          Left = 14
+          Left = 18
           Height = 3
-          Top = 73
+          Top = 100
           Width = 230
         end
         object labPage: TLabel
           Caption = 'Pages'
           Color = clNone
+          ParentColor = False
           Left = 14
-          Height = 17
-          Top = 90
-          Width = 102
+          Height = 13
+          Top = 116
+          Width = 36
         end
         object edRange: TEdit
           TabOrder = 0
           Left = 92
           Height = 23
-          Top = 47
-          Width = 112
+          Top = 70
+          Width = 154
         end
         object edPageSet: TComboBox
+          ItemIndex = 0
           Items.Strings = (
             'All pages'
             'Odd pages'
             'Even pages'
           )
-          ItemIndex = 0
           MaxLength = 0
           ParentCtl3D = False
           Style = csDropDownList
           TabOrder = 1
           Text = 'All pages'
-          Left = 132
+          Left = 130
           Height = 25
-          Top = 82
+          Top = 108
           Width = 118
         end
         object rbCurrentPage: TRadioButton
@@ -199,20 +217,20 @@ object dlgSelectPrinter: TdlgSelectPrinter
           DragCursor = crDefault
           Enabled = False
           TabOrder = 2
-          Left = 12
-          Height = 20
-          Top = 26
-          Width = 98
+          Left = 14
+          Height = 24
+          Top = 21
+          Width = 97
         end
         object rbRange: TRadioButton
           AllowGrayed = True
           Caption = 'Range'
           DragCursor = crDefault
           TabOrder = 4
-          Left = 12
-          Height = 20
-          Top = 50
-          Width = 61
+          Left = 14
+          Height = 24
+          Top = 68
+          Width = 60
         end
         object rbAllPage: TRadioButton
           AllowGrayed = True
@@ -221,21 +239,30 @@ object dlgSelectPrinter: TdlgSelectPrinter
           DragCursor = crDefault
           State = cbChecked
           TabOrder = 3
-          Left = 12
-          Height = 20
-          Top = 2
-          Width = 48
+          Left = 14
+          Height = 24
+          Width = 43
+        end
+        object rbSelection: TRadioButton
+          AllowGrayed = True
+          Caption = 'Selection'
+          DragCursor = crDefault
+          Enabled = False
+          TabOrder = 5
+          Left = 14
+          Height = 24
+          Top = 45
+          Width = 76
         end
       end
       object gbCopies: TGroupBox
         Caption = ' Copies '
-        ClientHeight = 114
+        ClientHeight = 138
         ClientWidth = 253
-        ParentColor = True
         ParentCtl3D = False
         TabOrder = 1
         Left = 279
-        Height = 131
+        Height = 155
         Top = 7
         Width = 257
         object imgCollate: TImage
@@ -250,14 +277,13 @@ object dlgSelectPrinter: TdlgSelectPrinter
         object lanNumCopies: TLabel
           Caption = 'Number of copies'
           Color = clNone
+          ParentColor = False
           Left = 6
-          Height = 17
+          Height = 13
           Top = 8
-          Width = 113
+          Width = 99
         end
         object edCopies: TSpinEdit
-          ClimbRate = 1
-          MaxValue = 100
           TabOrder = 0
           Left = 134
           Height = 20
@@ -271,9 +297,9 @@ object dlgSelectPrinter: TdlgSelectPrinter
           OnClick = cbReverseCLICK
           TabOrder = 2
           Left = 119
-          Height = 20
+          Height = 24
           Top = 32
-          Width = 104
+          Width = 63
         end
         object cbReverse: TCheckBox
           AllowGrayed = True
@@ -282,37 +308,39 @@ object dlgSelectPrinter: TdlgSelectPrinter
           OnClick = cbReverseCLICK
           TabOrder = 1
           Left = 119
-          Height = 20
+          Height = 24
           Top = 60
-          Width = 120
+          Width = 70
         end
       end
     end
     object pgAdvance: TPage
       Caption = 'Advanced'
-      ClientWidth = 533
-      ClientHeight = 138
-      Left = 2
-      Height = 138
-      Top = 28
-      Width = 533
+      ClientWidth = 537
+      ClientHeight = 170
+      Height = 170
+      Top = 22
+      Width = 537
       object labTask: TLabel
         Caption = 'Delayed task'
         Color = clNone
+        ParentColor = False
         Left = 7
-        Height = 17
+        Height = 13
         Top = 10
-        Width = 201
+        Width = 74
       end
       object Label5: TLabel
         Caption = 'Priority'
         Color = clNone
+        ParentColor = False
         Left = 7
-        Height = 17
+        Height = 13
         Top = 45
-        Width = 112
+        Width = 40
       end
       object cbTasktime: TComboBox
+        ItemIndex = 0
         Items.Strings = (
           'Immediate'
           'Never (suspending)'
@@ -324,7 +352,6 @@ object dlgSelectPrinter: TdlgSelectPrinter
           'After midnight'
           'At time'
         )
-        ItemIndex = 0
         MaxLength = 0
         OnChange = cbTasktimeCHANGE
         OnKeyPress = cbPrintersKEYPRESS
@@ -341,8 +368,10 @@ object dlgSelectPrinter: TdlgSelectPrinter
         DragCursor = crDefault
         EditMask = '99:99:99'
         MaxLength = 8
+        ParentColor = False
         ParentCtl3D = False
         TabOrder = 0
+        TabStop = True
         Text = '23:00:00'
         Left = 429
         Height = 23
@@ -350,8 +379,6 @@ object dlgSelectPrinter: TdlgSelectPrinter
         Width = 58
       end
       object edPriority: TSpinEdit
-        ClimbRate = 1
-        MaxValue = 100
         TabOrder = 3
         Left = 127
         Height = 20
@@ -387,37 +414,40 @@ object dlgSelectPrinter: TdlgSelectPrinter
     Align = alBottom
     Anchors = [akLeft, akBottom]
     ClientHeight = 41
-    ClientWidth = 537
+    ClientWidth = 552
     FullRepaint = False
     TabOrder = 2
     TabStop = True
     Height = 41
-    Top = 344
-    Width = 537
+    Top = 360
+    Width = 552
     object btnCancel: TButton
       Anchors = [akTop, akRight]
+      BorderSpacing.InnerBorder = 2
       Cancel = True
       Caption = 'Cancel'
       ModalResult = 2
       TabOrder = 0
-      Left = 432
+      Left = 447
       Height = 25
       Top = 8
       Width = 91
     end
     object btnPrint: TButton
       Anchors = [akTop, akRight]
+      BorderSpacing.InnerBorder = 2
       Caption = 'Print'
       Default = True
       ModalResult = 1
       OnClick = btnPrintCLICK
       TabOrder = 1
-      Left = 328
+      Left = 343
       Height = 25
       Top = 8
       Width = 99
     end
     object btnReduc: TButton
+      BorderSpacing.InnerBorder = 2
       Caption = 'More ...'
       OnClick = btnReducCLICK
       TabOrder = 2
@@ -427,6 +457,7 @@ object dlgSelectPrinter: TdlgSelectPrinter
       Width = 88
     end
     object btnPreview: TButton
+      BorderSpacing.InnerBorder = 2
       Caption = 'Preview'
       ModalResult = 6
       TabOrder = 3
